{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 23,
  "lineage": "9ec6436c-cea2-85c6-a0ea-3d292b8313df",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06894e39cbd4e93a7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-144-121-77.compute-1.amazonaws.com",
            "public_ip": "54.144.121.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-us-east-1a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-us-east-1a",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:internet-gateway/igw-041078c10502a2145",
            "id": "igw-041078c10502a2145",
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06894e39cbd4e93a7",
            "connectivity_type": "public",
            "id": "nat-0c67997bdaadd8e03",
            "network_interface_id": "eni-044fdf3fb502957e0",
            "private_ip": "10.0.101.156",
            "public_ip": "54.144.121.77",
            "subnet_id": "subnet-0f1b0d33e6fd52d3f",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-us-east-1a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-us-east-1a",
              "environment": "dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013723f181eb0a9331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c67997bdaadd8e03",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013723f181eb0a933",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-041078c10502a2145",
            "id": "r-rtb-02b1caa0e7caa5d6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b1caa0e7caa5d6e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:route-table/rtb-0c836237f5be2a755",
            "id": "rtb-0c836237f5be2a755",
            "owner_id": "384221790116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-dev-rajat-vpc-db",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-db",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:route-table/rtb-013723f181eb0a933",
            "id": "rtb-013723f181eb0a933",
            "owner_id": "384221790116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-dev-rajat-vpc-private",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-private",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:route-table/rtb-02b1caa0e7caa5d6e",
            "id": "rtb-02b1caa0e7caa5d6e",
            "owner_id": "384221790116",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-dev-rajat-vpc-public",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-public",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fad888c6ac6605e",
            "route_table_id": "rtb-0c836237f5be2a755",
            "subnet_id": "subnet-038da3c4bfaa22bb4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ef795da10377ca7",
            "route_table_id": "rtb-0c836237f5be2a755",
            "subnet_id": "subnet-022fd9b791305bb2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8457713abe3a1a0",
            "route_table_id": "rtb-013723f181eb0a933",
            "subnet_id": "subnet-033031812eec17d6f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba778b91c455ff4c",
            "route_table_id": "rtb-013723f181eb0a933",
            "subnet_id": "subnet-02339fb3aef492aaa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0217d6ffc7a4309a3",
            "route_table_id": "rtb-02b1caa0e7caa5d6e",
            "subnet_id": "subnet-0f1b0d33e6fd52d3f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc81c69345ab80b9",
            "route_table_id": "rtb-02b1caa0e7caa5d6e",
            "subnet_id": "subnet-0bacfc6ac877642e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-038da3c4bfaa22bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "id": "subnet-038da3c4bfaa22bb4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-db-us-east-1a",
              "Type": "database subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-db-us-east-1a",
              "Type": "database subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-022fd9b791305bb2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "id": "subnet-022fd9b791305bb2c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-db-us-east-1b",
              "Type": "database subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-db-us-east-1b",
              "Type": "database subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-033031812eec17d6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-033031812eec17d6f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-private-us-east-1a",
              "Type": "private Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-private-us-east-1a",
              "Type": "private Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-02339fb3aef492aaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02339fb3aef492aaa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-private-us-east-1b",
              "Type": "private Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-private-us-east-1b",
              "Type": "private Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-0f1b0d33e6fd52d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0f1b0d33e6fd52d3f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-public-us-east-1a",
              "Type": "Public Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-public-us-east-1a",
              "Type": "Public Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:subnet/subnet-0bacfc6ac877642e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0bacfc6ac877642e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc-public-us-east-1b",
              "Type": "Public Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc-public-us-east-1b",
              "Type": "Public Subnet",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0523256b6165b888f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384221790116:vpc/vpc-0523256b6165b888f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6b88009901d71b1",
            "default_route_table_id": "rtb-09ae4e04599ca72e0",
            "default_security_group_id": "sg-0dd4058127dd21107",
            "dhcp_options_id": "dopt-4f9be535",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0523256b6165b888f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09ae4e04599ca72e0",
            "owner_id": "384221790116",
            "tags": {
              "Name": "SAP-dev-rajat-vpc",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-rajat-vpc",
              "environment": "dev",
              "owners": "SAP"
            }
          }
        }
      ]
    }
  ]
}